centos-ansible-k8s-1.15.2/keycloak/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-nodeport
  namespace: keycloak
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: keycloak
    app.kubernetes.io/name: keycloak
  type: NodePort
