centos-ansible-k8s-1.15.2/keycloak/keycloak-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: keycloak-web-ui
  namespace: keycloak
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  tls:
  - hosts: 
    - keycloak.shaun.io
    secretName: keycloak-tls
  rules:
  - host: keycloak.shaun.io
    http:
      paths:
      - path: /
        backend:
          serviceName: keycloak-http
          servicePort: https
